# NDimLab

./: README.md  main.py  pyproject.toml
demos/: locked_points_demo.py  matrix_gui.py  numpy_promotion.py  opengl.py  pyside6_widgets.py  transpos_benchmark.py
demos/shaders/: basic.frag  basic.vert  grid.frag  grid.vert
shaders/: basic.frag  grid.frag  grid_old.frag  poly.frag  poly.vert  texture.frag  texture.vert
