[project]
name = "NDimLab"
version = "0.0.1"
description = "Tools for working with n-dimensional matrices and transformations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.5.0",
    "pyside6>=6.11.1",
    "pyside6-stubs>=6.7.3.0",
]

[dependency-groups]
dev = ["pyright", "ty", "ruff"]

[tool.ruff]
target-version = "py314"
line-length = 320

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint]
select = ["PLW0602", "PLW0603", "PLW0604"]


[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportPrivateUsage = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUntypedFunctionDecorator = "error"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportMissingTypeArgument = "none"
